# TypstPresenter

./: .gitignore  README.md  aip-hd-tea-TypstPresenter- Convert slides from PPTX to Typst (and maybe back-) using intermediate abstract representations.url  demo_convert.py  pyproject.toml
docs_local/: 2026-04-16 - analysis_results.md  About ShapeHandler interface.txt.txt
src/typstpresenter/: __main__.py
src/typstpresenter/convert/: main.py
src/typstpresenter/model/: Element.py  Grid.py  Image.py  List.py  MediaImage.py  Presentation.py  Slide.py
src/typstpresenter/model/text/: Atom.py  Link.py  Text.py
src/typstpresenter/powerpoint/: Ignore.py  flatten.py  interpret.py
src/typstpresenter/powerpoint/interpreters/: Interpreter.py  PictureInterpreter.py  SlidePlaceholderInterpreter.py  TextBoxInterpreter.py
src/typstpresenter/stats/: main.py
src/typstpresenter/templates/typst/: presentation.diatypst.typ
src/typstpresenter/typst/: Compiler.py  Expressor.py  GridExpressor.py  ImageExpressor.py  LinkExpressor.py  ListExpressor.py  NoneExpressor.py  StringExpressor.py  SubscriptExpressor.py  SuperscriptExpressor.py  TextExpressor.py  TitleExpressor.py  express.py
src/typstpresenter/typst/expressors/: Expressor.py  GridExpressor.py  ImageExpressor.py  LinkExpressor.py  ListExpressor.py  NoneExpressor.py  StringExpressor.py  SubscriptExpressor.py  (+3 more)
tests/: generate_test_data.py  test_convert.py  test_model.py
tests/data/: media.pptx  multi_content.pptx  simple.pptx  talk_example_a.pptx  two_content.pptx
tests/data/example_talk_typst_nsiai/: main-A.typ
(+2 files in other folders)
